--- a/Seccion09_fragment/app/src/main/res/values/strings.xml
+++ b/Seccion09_fragment/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 	<string name="app_name">Seccion09_fragment</string>
 	<!-- TODO: Remove or change this placeholder text -->
 	<string name="hello_blank_fragment">Hello blank fragment</string>
+	<string name="title_activity_detalle">DetalleActivity</string>
 </resources>
