--- a/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values/strings.xml
+++ b/CuantoCuesta/CuantoCuesta_v2/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CuantoCuesta_v2</string>
+    <string name="DESCUENTO_MENOS_50_PORCIENTO_EN_SEGUNDA_UNIDAD">-50% en segunda unidad</string>
+    <string name="DESCUENTO_MENOS_70_PORCIENTO_EN_SEGUNDA_UNIDAD">-70% en segunda unidad</string>
+    <string name="DESCUENTO_MENOS_X_PORCIENTO_EN_SEGUNDA_UNIDAD">-X% en segunda unidad</string>
+    <string name="DESCUENTO_DOS_POR_UNO">2x1</string>
+    <string name="DESCUENTO_TRES_POR_DOS">3x2</string>
 </resources>
