--- a/Google Sheets Api/EditGoogleSheets_v8/app/src/main/res/values/strings.xml
+++ b/Google Sheets Api/EditGoogleSheets_v8/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">EditGoogleSheets_v8</string>
+    <string name="app_name">EditGoogleSheets</string>
 </resources>
